--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.main-column {
+  min-height: 480px;
+}
+.newsHref{
+    color: black;
+}
+aside ul li {
+    margin: 15px 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root{
+    display: flex;
+    background-color: lightgray;
+    justify-content: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+    width: 1200px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.news{
+    background-color: white;
+    padding-top: 10px;
+    padding-left: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.comments{
+    background-color: antiquewhite;
+    margin-top: 30px;
+    padding-left: 10px;
 }
+.general{
+    padding-left: 10px;
+}
+.news{
+    padding-left: 10px;
+    background-color: lightgray;
+}
+.roundName{
+    text-align: center;
+}
+.headerContainer{
+    display: flex;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.headerTitle{
+    padding-top: 40px;
+    padding-left: 20px;
 }
