edit mapDispatchToProps, add preloader, add submit with enter

--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,8 @@ aside ul li {
     padding-top: 40px;
     padding-left: 20px;
 }
+.preloader {
+    display: flex;
+    justify-content: center;
+
+}
